[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sshmcp"
version = "0.1.0"
description = "Secure SSH proxy MCP server with TOTP verification for AI coding tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "sshmcp contributors" },
]
keywords = ["mcp", "ssh", "totp", "security", "ai", "claude", "codex", "opencode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp[cli]>=1.0",
    "paramiko>=3.0",
    "pyotp>=2.9",
    "keyring>=25.0",
    "cryptography>=42.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
win = ["pywin32>=306"]
linux = ["secretstorage>=3.3"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
sshmcp = "sshmcp.cli:main"

[project.urls]
Homepage = "https://github.com/luoxiaoxin123/sshmcp"
Issues = "https://github.com/luoxiaoxin123/sshmcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["sshmcp"]
